--- a/_posts/2012-08-15-1812.md
+++ b/_posts/2012-08-15-1812.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 1812
-category: essay
+category: post
 tags: [加拿大]
 description: Ottawa 河畔的加拿大文明博物馆，在 Gatineau 坐北朝南对着 Ottawa 城区，这也许是我到访过环境最好的博物馆了。不得不说，馆内一遍又一遍播放着1812 的视频广告，引起我对这年军事冲突的兴趣。
 ---
